--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1124,7 +1124,7 @@ document.getElementById('reportForm')?.addEventListener('submit', async (e)=>{
   <li>
     <a class="sheet__item" href="/support/new">
       <span class="with-ic">
-        <img class="ic" src="/static/icons/sfer.png" alt="" width="22" height="22">
+        <img class="ic" src="/static/iconblossom/sfer.png" alt="" width="22" height="22">
         مراسلة الدعم
       </span>
       <i class="bi bi-chevron-left"></i>
@@ -1135,7 +1135,7 @@ document.getElementById('reportForm')?.addEventListener('submit', async (e)=>{
   <li>
     <a class="sheet__item" href="/profile">
       <span class="with-ic">
-        <img class="ic" src="/static/icons/vert.png" alt="" width="22" height="22">
+        <img class="ic" src="/static/iconblossom/vert.png" alt="" width="22" height="22">
         حسابي
       </span>
       <i class="bi bi-chevron-left"></i>
@@ -1146,7 +1146,7 @@ document.getElementById('reportForm')?.addEventListener('submit', async (e)=>{
   <li>
     <a class="sheet__item" href="/favorites">
       <span class="with-ic">
-        <img class="ic" src="/static/icons/mov.png" alt="" width="22" height="22">
+        <img class="ic" src="/static/iconblossom/mov.png" alt="" width="22" height="22">
         مفضلتي
       </span>
       <i class="bi bi-chevron-left"></i>
@@ -1157,7 +1157,7 @@ document.getElementById('reportForm')?.addEventListener('submit', async (e)=>{
   <li>
     <a class="sheet__item" href="/settings">
       <span class="with-ic">
-        <img class="ic" src="/static/icons/ramdi.png" alt="" width="22" height="22">
+        <img class="ic" src="/static/iconblossom/ramdi.png" alt="" width="22" height="22">
         الإعدادات
       </span>
       <i class="bi bi-chevron-left"></i>
@@ -1168,7 +1168,7 @@ document.getElementById('reportForm')?.addEventListener('submit', async (e)=>{
   <li>
     <a class="sheet__item text-danger" href="/logout">
       <span class="with-ic">
-        <img class="ic" src="/static/icons/roge.png" alt="" width="22" height="22">
+        <img class="ic" src="/static/iconblossom/roge.png" alt="" width="22" height="22">
         خروج
       </span>
       <i class="bi bi-chevron-left"></i>
